--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-# author_profile: true
+author_profile: true
 ---
 
 <p>You’ll find this post in your <code>_posts</code> directory.</p>
