--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 ---
-
+<h1> Welcome All to my site </h1>
 <p>You’ll find this post in your <code>_posts</code> directory.</p>
 <p>To add new posts, simply add a file in the <code>_posts</code><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a> directory that follows the convention <code>YYYY-MM-DD-name-of-post.ext</code> and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.</p>
 <p>Jekyll also offers powerful support for code snippets:</p>
