--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: home
 author_profile: true
 ---
 <h1> Welcome All to my site </h1>
-<p> I am Anand Dev Ranjan, a reseach scholar at <a href="https://www.iiserkol.ac.in/web/en/">IISER Kolkata </a>. 
-<p>  I am mostly working in optical physics but my research topic is quite interdisciplinary. I am currently working on a project to immobilise bioparticles on specific location of glass slide applying the optical tweezers.  </p>
+<p> I am Anand Dev Ranjan, a reseach scholar working under the supervision of <a href="https://www.iiserkol.ac.in/~ayan/">Prof. Ayan Banerjee</a> at <a href="https://www.iiserkol.ac.in/web/en/">IISER Kolkata </a>. 
+<p>  My work is a based on the phenomena of microbubbles which is nucleated when a tightly focussed laser light falls on an absorbing sample. The resulting microbubble also leads to the formation of a flow called as the "Marangoni flow". bit interdisciplinary which lies at the intersection of Optics, Fluid dynamics and Statistical Physics. I am also involved in theoretical modelling Currently I am working on a protoptype to develop a miltiple disease sensing platform research interests are I am mostly working in optical physics but my research topic is quite interdisciplinary. I am currently working on a project to immobilise bioparticles on specific location of glass slide applying the optical tweezers.  </p>
 
 <p> Here you will find my list of publication in the recent posts. </p>
 <section class="footnotes" role="doc-endnotes">
