--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-title: "Welcome to my website !"
+title: "Welcome to my website An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer -- Prof. Max Planck
+'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !"
 header:
   overlay_color: "#333"
 layout: home
