--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer* -- Prof. Max Planck"
+title: "An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer** -- Prof. Max Planck"
 header:
   overlay_color: "#333"
 layout: home
@@ -11,7 +11,7 @@ author_profile: true
 
 <p> Here you will find my list of publication in the recent posts. </p>
 <section class="footnotes" role="doc-endnotes">
-<p> * Adopted from **'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !** </p>
+<p> ** Adopted from 'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !** </p>
 <hr />
 <ol>
 <li id="fn1" role="doc-endnote"><p>Editing the Footnote.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
