--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@ author_profile: true
 <p> I am Anand Dev Ranjan, a reseach scholar working under the supervision of <a href="https://www.iiserkol.ac.in/~ayan/">Prof. Ayan Banerjee</a> at <a href="https://www.iiserkol.ac.in/web/en/">IISER Kolkata </a>. My current research interests lies in the study and application of microbubbles formed using optical tweezers involving both theoretical and experimental aspects. 
 <p>  Microbubbles are nucleated when a tightly focussed laser light falls on an absorbing sample. The resulting microbubble also leads to the formation of a flow called as the "Marangoni flow". As the flow is manisfested due to the presence of microbubble so tranlating the microbubble leads to the translation of the flow. Since, microbubble is formed due to the laser so translationg the laser leads to tranlsation of the microbubble resuting in the translation of flow. Tranlsating the microbubble leads to the formation of patterns of the dispersed particles due to the irreversible self-assembly. My work is to find the dynamics of this process and apply this patterning to immobilise biomaterials and conducting polymers at specific location on the glass substrate. As you can see my work is a bit interdisciplinary which lies at the intersection of Optics, Fluid dynamics and Statistical Physics. I am also involved in theoretical modelling Currently I am working on a protoptype to develop a miltiple disease sensing platform research interests are I am mostly working in optical physics but my research topic is quite interdisciplinary. I am currently working on a project to immobilise bioparticles on specific location of glass slide applying the optical tweezers.  </p>
 
+
+To add new posts, simply add a file in the `_posts`[^posts] directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
+
+[^posts]: Editing the Footnote.
+
+Jekyll also offers powerful support for code snippets:
+
+```ruby
+def print_hi(name)
+  puts "Hi, #{name}"
+end
+print_hi('Tom')
+#=> prints 'Hi, Tom' to STDOUT.
+```
+
+Check out th
+
 <p> Here you will find my list of publication in the recent posts. </p>
 <section class="footnotes" role="doc-endnotes">
 <p> ** Adopted from 'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !** </p>
