--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer** -- Prof. Max Planck"
+title: "An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer<sup>superscript text</sup> ^1** -- Prof. Max Planck"
 header:
   overlay_color: "#333"
 layout: home
