--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "<i>An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer</i><sup>1</sup> -- Prof. Max Planck"
+title: "<i>An experiment is a question which science poses to Nature, and a measurement is the recording of Nature's answer</i><sup>1</sup> <br> -- Prof. Max Planck"
 header:
   overlay_color: "#333"
 layout: home
