--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ author_profile: true
 <section class="footnotes" role="doc-endnotes">
 <hr />
 <ol>
-<li id="fn1" role="doc-endnote"><p>** Adopted from 'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !**<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1" role="doc-endnote"><p> Adopted from 'The Meaning and Limits of Exact Science' (1947), in Scientific Autobiography and Other Papers, trans. Frank Gaynor (1950) !**<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section>
